Optimize LLM call