@@ -21,7 +21,6 @@ import io.modelcontextprotocol.spec.ProtocolVersions;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -32,7 +31,7 @@ public final class MCPTransportConstants {
     
     public static final String PROTOCOL_VERSION = ProtocolVersions.MCP_2025_11_25;
     
-    public static final List<String> SUPPORTED_PROTOCOL_VERSIONS = Collections.singletonList(PROTOCOL_VERSION);
+    public static final List<String> SUPPORTED_PROTOCOL_VERSIONS = List.of(PROTOCOL_VERSION, ProtocolVersions.MCP_2025_06_18);
     
     public static final String SERVER_NAME = "apache-shardingsphere-mcp";
     
